--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdownedit",
+  "name": "electron-vue",
   "version": "1.0.0",
   "description": "a markdown editor",
   "author": "vvck <verityck@live.cn>",
